--- a/docs/Getting-Started/03-2.Deployment-Scripts.md
+++ b/docs/Getting-Started/03-2.Deployment-Scripts.md
@@ -40,21 +40,20 @@ The following table provides the Command Line options available with the Composa
 | `LAUNCH_WEB_SITE`               |Launches browser and opens Composable                                                                             |FALSE                         |TRUE                                |
 | `RUNSFOLDER`                    |Folder path to location where runs are stored                                                                     |E:\folder\runs\               |c:\program files\companalytics\runs\|
 | `INSTANCE_SECRET`               |Complex secret for encrypting keys in Composable                                                                  |Long Random String            |auto-generated                      |
-|                               |                                                                                                                  |                              |                                    |
 
 There are additional built-in Installer options:
 
-|Built-in Installer Options   |Description                                                                                                       |
-|-----------------------------|------------------------------------------------------------------------------------------------------------------|
-|                             |                                                                                                                  |
-|/install &#124; /repair &#124; /layout |Installs, repairs, uninstalls or creates a complete local copy of the bundle in directory.  Install is the default|
-|/passive &#124; /quiet            |Displays minimal UI with no prompts or displays no UI and no prompts. But default UI and all prompts are displayed|
-|/norestart                   |Supress any attemps to restart. By default UI will prompt before restart                                          |
-|/l &#124; /log log.txt            |Logs to a specific file.  By default a log file is created in %TEMP%                                              |
+|Built-in Installer Options     |Description                                                                                                       |
+|-------------------------------|------------------------------------------------------------------------------------------------------------------|
+|                               |                                                                                                                  |
+|`/install` &#124; `/repair` &#124; `/layout` |Installs, repairs, uninstalls or creates a complete local copy of the bundle in directory.  Install is the default|
+|`/passive` &#124; `/quiet`            |Displays minimal UI with no prompts or displays no UI and no prompts. But default, UI and all prompts are displayed|
+|`/norestart`                   |Supress any attemps to restart. By default, UI will prompt before restart                                          |
+|`/l` &#124; `/log log.txt`            |Logs to a specific file. By default a log file is created in %TEMP%                                              |
 
 
 ## Example Usage
 
 ```code
-CompAnalyticsSetup.exe /quiet /install /l c:\temp\InstallLogs\log.txt ADMIN_EMAIL=admin@composableanalytics.com ADMIN_PASSWORD=SuperSecretPassword$$123 SMTP_SERVER=smtp.sendgrid.net SMTP_USERNAME=apikey SMTP_PASSWORD=mysupersecretsmtppassword  ALLOW_ANONYMOUS_ACCESS=true LICENSE_FILE=c:\temp\ProdLicense.xml INSTANCE_SECRET=mylongrandominstancesecret
+CompAnalyticsSetup.exe /quiet /install /l c:\temp\InstallLogs\log.txt ADMIN_EMAIL=admin@composableanalytics.com ADMIN_PASSWORD=SuperSecretPassword$$123 SMTP_SERVER=smtp.sendgrid.net SMTP_USERNAME=apikey SMTP_PASSWORD=mysupersecretsmtppassword ALLOW_ANONYMOUS_ACCESS=true LICENSE_FILE=c:\temp\ProdLicense.xml INSTANCE_SECRET=mylongrandominstancesecret
 ```
