--- a/docs/Getting-Started/03-2.Deployment-Scripts.md
+++ b/docs/Getting-Started/03-2.Deployment-Scripts.md
@@ -15,31 +15,41 @@ In certain scale-out our automated deployments, it is helpful to generate deploy
 
 The following table provides the Command Line options available with the Composable Installer.
 
-|Installer Command Line Options   |Description                                                                                                       |Example Value                 |Default Value                       |
-|---------------------------------|------------------------------------------------------------------------------------------------------------------|------------------------------|------------------------------------|
-| `MEMBERSHIPSTORE_NAME`          |Database name of Membership Store                                                                                 |MembershipStore               |MembershipStore                     |
-| `MEMBERSHIPSTORE_SERVER`        |SQL Server instance name                                                                                          |.\MyInstance  or  myserver.com|.                                   |
-| `ADMIN_USERNAME`                |Username of first Composable admin account                                                                        |admin                         |admin                               |
-| `ADMIN_EMAIL`                   |Email of first Composable admin account                                                                           |admin@composable.ai           |                                    |
-| `ADMIN_PASSWORD`                |Password of first Composable admin account                                                                        |                              |                                    |
-| `DB_NAME`                       |Name of the Composable Database                                                                                   |CompAnalytics                 |CompAnalytics                       |
-| `DB_SERVER`                     |SQL Server instance name                                                                                          |.\MyInstance  or  myserver.com|.                                   |
-| `SITE_URI`                      |The url where Composable will be accessible                                                                       |https://mysite.com            |http://localhost                    |
-| `WEB_APP_NAME`                  |The sub application in IIS where Composable will be accesible                                                     |/CompAnalytics                |/CompAnalytics                      |
-| `SMTP_SERVER`                   |The smtp server used for sending emails                                                                           |mail.corporate.com            |                                    |
-| `SMTP_PORT`                     |SMTP port                                                                                                         |587                           |                                    |
-| `SMTP_USERNAME`                 |username used to connect to the SMTP server                                                                       |                              |                                    |
-| `SMTP_PASSWORD`                 |Password  for the SMTP credentials                                                                                |                              |                                    |
-| `NOREPLY_EMAIL`                 |Default from email address                                                                                        |noreply@composable.ai         |noreply@composableanalytics.com     |
-| `WEB_PROXY_ENABLED`             |If outbound communication needs to go through proxy, set to `true`                                                  |TRUE                          |FALSE                               |
-| `WEB_PROXY`                     |URL of HTTP proxy                                                                                                 |http://mycorporateproxy/      |                                    |
-| `APPROVER_USERNAME`             |username of approver for form account registrations                                                               |admin                         |                                    |
-| `ALLOW_ANONYMOUS_ACCESS`        |If `true`,  anonymous users can view and perform actions in Composable                                              |FALSE                         |FALSE                               |
-| `ALLOW_WINDOWS_AUTHENTICATION`  |If `true`,  enables windows authentication                                                                          |TRUE                          |FALSE                               |
-| `LICENSE_FILE`                  |File path to license file                                                                                         |c:\folder\license.xml         |                                    |
-| `LAUNCH_WEB_SITE`               |Launches browser and opens Composable                                                                             |FALSE                         |TRUE                                |
-| `RUNSFOLDER`                    |Folder path to location where runs are stored                                                                     |E:\folder\runs\               |c:\program files\companalytics\runs\|
-| `INSTANCE_SECRET`               |Complex secret for encrypting keys in Composable                                                                  |Long Random String            |auto-generated                      |
+|Installer Command Line Options      |Description                                                                                                                                                                                                                                                                                                                                                                                                       |Example Value                 |Default Value                       |
+|------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------|------------------------------------|
+| `MEMBERSHIPSTORE_NAME`                |Database name of Membership Store                                                                                                                                                                                                                                                                                                                                                                                 |MembershipStore               |MembershipStore                     |
+| `MEMBERSHIPSTORE_SERVER`              |SQL Server instance name for Membership Store                                                                                                                                                                                                                                                                                                                                                                     |.\MyInstance  or  myserver.com|.                                   |
+| `MEMBERSHIPSTORE_USERNAME`            |SQL Credentials                                                                                                                                                                                                                                                                                                                                                                                                   |                              |                                    |
+| `MEMBERSHIPSTORE_PASSWORD`            |SQL Credentials                                                                                                                                                                                                                                                                                                                                                                                                   |                              |                                    |
+| `MEMBERSHIPSTORE_AUTH_TYPE`           |Type of Authentication. Options are `WINDOWS`, `ADINTEGRATED`, `SQLSERVER`, `ADPASSWORD`                                                                                                                                                                                                                                                                                                                                  |WINDOWS                       |WINDOWS                             |
+| `MEMBERSHIPSTORE_MGMT_INTEGRATED_USER`|If `true`,  will use the current integrated users credentials for db installation and maintainence.  If `false`, will use the specified credentials for db creation and management                                                                                                                                                                                                                                    |TRUE                          |TRUE                                |
+| `ADMIN_USERNAME`                      |Username of first Composable admin account                                                                                                                                                                                                                                                                                                                                                                        |admin                         |admin                               |
+| `ADMIN_EMAIL`                         |Email of first Composable admin account                                                                                                                                                                                                                                                                                                                                                                           |admin@composable.ai           |                                    |
+| `ADMIN_PASSWORD`                      |Password of first Composable admin account                                                                                                                                                                                                                                                                                                                                                                        |                              |                                    |
+| `DB_NAME`                             |Name of the Composable Database                                                                                                                                                                                                                                                                                                                                                                                   |CompAnalytics                 |CompAnalytics                       |
+| `DB_SERVER`                           |SQL Server instance name                                                                                                                                                                                                                                                                                                                                                                                          |.\MyInstance  or  myserver.com|.                                   |
+| `CADB_USERNAME`                       |SQL Credentials                                                                                                                                                                                                                                                                                                                                                                                                   |                              |                                    |
+| `CADB_PASSWORD`                       |SQL Credentials                                                                                                                                                                                                                                                                                                                                                                                                   |                              |                                    |
+| `CADB_AUTH_TYPE`                      |Type of Authentication. Options are `WINDOWS`, `ADINTEGRATED`, `SQLSERVER`, `ADPASSWORD`                                                                                                                                                                                                                                                                                                                                  |WINDOWS                       |WINDOWS                             |
+| `CADB_MGMT_INTEGRATED_USER`           |If `true`,  will use the current integrated users credentials for db installation and maintainence.  If `false`, will use the specified credentials for db creation and management                                                                                                                                                                                                                                    |TRUE                          |TRUE                                |
+| `SITE_URI`                            |The URL where Composable will be accessible                                                                                                                                                                                                                                                                                                                                                                       |https://mysite.com            |http://localhost                    |
+| `WEB_APP_NAME`                        |The sub application in IIS where Composable will be accesible                                                                                                                                                                                                                                                                                                                                                     |/CompAnalytics                |/CompAnalytics                      |
+| `SMTP_SERVER`                         |The SMTP server used for sending emails                                                                                                                                                                                                                                                                                                                                                                           |mail.corporate.com            |                                    |
+| `SMTP_PORT`                           |SMTP port                                                                                                                                                                                                                                                                                                                                                                                                         |587                           |                                    |
+| `SMTP_USERNAME`                       |username used to connect to the SMTP server                                                                                                                                                                                                                                                                                                                                                                       |                              |                                    |
+| `SMTP_PASSWORD`                       |Password  for the SMTP credentials                                                                                                                                                                                                                                                                                                                                                                                |                              |                                    |
+| `NOREPLY_EMAIL`                       |Default from e-mail address                                                                                                                                                                                                                                                                                                                                                                                        |noreply@composable.ai         |noreply@composableanalytics.com     |
+| `WEB_PROXY_ENABLED`                   |If outbound communication needs to go through proxy, set to `true`                                                                                                                                                                                                                                                                                                                                                  |TRUE                          |FALSE                               |
+| `WEB_PROXY`                           |URL of HTTP proxy                                                                                                                                                                                                                                                                                                                                                                                                 |http://mycorporateproxy/      |                                    |
+| `APPROVER_USERNAME`                   |username of approver for form account registrations                                                                                                                                                                                                                                                                                                                                                               |admin                         |                                    |
+| `ALLOW_ANONYMOUS_ACCESS`              |If `true`,  anonymous users can view and perform actions in Composable                                                                                                                                                                                                                                                                                                                                              |FALSE                         |FALSE                               |
+| `ALLOW_WINDOWS_AUTHENTICATION`        |If `true`,  enables windows authentication                                                                                                                                                                                                                                                                                                                                                                          |TRUE                          |FALSE                               |
+| `LICENSE_FILE`                        |File path to license file                                                                                                                                                                                                                                                                                                                                                                                         |C:\folder\license.xml         |                                    |
+| `LAUNCH_WEB_SITE`                     |Launches browser and opens Composable                                                                                                                                                                                                                                                                                                                                                                             |FALSE                         |TRUE                                |
+| `RUNSFOLDER`                          |Folder path to location where runs are stored                                                                                                                                                                                                                                                                                                                                                                     |E:\folder\runs\               |C:\program files\companalytics\runs\|
+| `INSTANCE_SECRET`                     |Complex secret for encrypting keys in Composable                                                                                                                                                                                                                                                                                                                                                                  |Long Random String            |auto-generated                      |
+| `FEATURES`                            |Comma delimited list of features to install. Options are: `MembershipStoreFeature`, `DatabaseFeature`, `ManagerFeature`, `WebApplicationFeature`,  `ActivationServiceFeature`, `CustodianServiceFeature`, `DataCatalogServiceFeature`, `DataLabServiceFeature`,  `MatlabServiceFeature`, `InteropServiceFeature`, `VS2012TemplateFeature`, `VS2013TemplateFeature`,  `VS2015TemplateFeature`, `VS2017TemplateFeature`, `VS2019TemplateFeature`|                              |                                    |
+
 
 There are additional built-in Installer options:
 
@@ -49,11 +59,11 @@ There are additional built-in Installer options:
 |`/install` &#124; `/repair` &#124; `/layout` |Installs, repairs, uninstalls or creates a complete local copy of the bundle in directory.  Install is the default|
 |`/passive` &#124; `/quiet`            |Displays minimal UI with no prompts or displays no UI and no prompts. But default, UI and all prompts are displayed|
 |`/norestart`                   |Supress any attemps to restart. By default, UI will prompt before restart                                          |
-|`/l` &#124; `/log log.txt`            |Logs to a specific file. By default a log file is created in %TEMP%                                              |
+|`/l` &#124; `/log log.txt`            |Logs to a specific file. By default a log file is created in `%TEMP%`                                              |
 
 
 ## Example Usage
 
 ```code
-CompAnalyticsSetup.exe /quiet /install /l c:\temp\InstallLogs\log.txt ADMIN_EMAIL=admin@composableanalytics.com ADMIN_PASSWORD=SuperSecretPassword$$123 SMTP_SERVER=smtp.sendgrid.net SMTP_USERNAME=apikey SMTP_PASSWORD=mysupersecretsmtppassword ALLOW_ANONYMOUS_ACCESS=true LICENSE_FILE=c:\temp\ProdLicense.xml INSTANCE_SECRET=mylongrandominstancesecret
+CompAnalyticsSetup.exe /quiet /install /l C:\Temp\InstallLogs\log.txt ADMIN_EMAIL=admin@composableanalytics.com ADMIN_PASSWORD=SuperSecretPassword$$123 SMTP_SERVER=smtp.sendgrid.net SMTP_USERNAME=apikey SMTP_PASSWORD=mysupersecretsmtppassword  ALLOW_ANONYMOUS_ACCESS=true LICENSE_FILE=c:\temp\ProdLicense.xml INSTANCE_SECRET=mylongrandominstancesecret
 ```
