--- a/docs/Getting-Started/03-2.Deployment-Scripts.md
+++ b/docs/Getting-Started/03-2.Deployment-Scripts.md
@@ -9,7 +9,7 @@ some_url: https://docs.composable.ai
 
 # Composable Deployment Scripts
 
-In certain scale-out our automated deployments, it is helpful to generate deployment scripts to install Composable across your environment. The Composable installer provides several command line options that can be used.
+For scale-out and/or automated deployments, it is helpful to generate deployment scripts to install Composable across your environment. The Composable installer provides several command line options that can be used.
 
 ## Command Line Options
 
