Added documentation for updated Boards

--- a/docs/DashBoards/01.Overview.md
+++ b/docs/DashBoards/01.Overview.md
@@ -9,4 +9,9 @@ some_url: https://docs.composable.ai
 
 # Overview
 
-Composable DashBoards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
+Composable Boards are customizable web portals where users can organize their Composable tools and data, making it easy to share and visualize.
+
+Users can arrange pins in a responsive and customizable layout. 'Shortcut' pins provide quick access to useful resources across Composable, and 'Data' pins allow users to keep searches, activity feeds, and DataFlow results in an easily accessible place.
+
+
+![!Sidebar Details Menu](img/CDC_Initiative_Board.png)
