--- a/docs/Composable-Platform/04.Product-Areas.md
+++ b/docs/Composable-Platform/04.Product-Areas.md
@@ -39,11 +39,11 @@ Composable QueryViews provide an interface for distributed queries and live data
 
 ![!Composable QueryViews](img/02.04.QueryViews.png)
 
-### [DashBoards](../DashBoards/01.Overview.md)
+### [Boards](../Boards/01.Overview.md)
 
-Composable DashBoards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
+Composable Boards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
 
-![!Composable DashBoards](img/02.04.DashBoards.png)
+![!Composable Boards](img/02.04.DashBoards.png)
 
 ### [DataRepository](../DataRepository/01.Overview.md)
 
