--- a/docs/Boards/01.Overview.md
+++ b/docs/Boards/01.Overview.md
@@ -9,4 +9,4 @@ some_url: https://docs.composable.ai
 
 # Overview
 
-Composable DashBoards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
+Composable Boards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
