--- a/docs/Boards/02.Edit-Mode.md
+++ b/docs/Boards/02.Edit-Mode.md
@@ -24,7 +24,7 @@ New boards open onto a blank canvas containing two columns and two rows. Click a
 
 ## Boxes
 
-Boxes allow you to control the layout of your board. Boxes hold items (such as charts, graphs, and images), and other boxes. You can control the orientation of your boxes, setting them to be either rows or columns.
+Boxes allow you to control the layout of your board. Boxes hold pins (such as charts, graphs, and images), and other boxes. You can control the orientation of your boxes, setting them to be either rows or columns.
 
 If you want to use boxes for organization, but don't want them to be show up on your page, you can also set them to be invisible.
 
@@ -33,13 +33,13 @@ If you want to use boxes for organization, but don't want them to be show up on 
 
 ## Pins 
 
-Pins are the contents of the board. They are three types of pins.
+Pins are the contents of the board. There are three types of pins.
 
 First are Text Pins, which simply allow you to add text to the board directly.
 
-Shortcut pins do as their name says, creating an instant shortcut to other Composable resources. Like on the search page, you can access other multiple pages involving a Shortcut's resource by hovering over the icon. 
+Shortcut pins do as their name says, creating an instant shortcut to other Composable resources. Like on the search page, you can access other pages involving a Shortcut's resource by hovering over the icon. 
 
-Data pins allow you to consolidate data from other parts of the website. Result pins display a result from a particular dataflow run. Saved Searches give you see the output of a search query, and updates as new results are found. Activity Feeds show all changes to a particular resource, such as edits and dataflow runs.
+Data pins allow you to consolidate data from other parts of the website. Result pins display a result from a particular dataflow run. Saved Searches give you see the output of a search query, and update as new results are found. Activity Feeds show all changes to a particular resource, such as edits and dataflow runs.
 
 
 
