--- a/docs/Boards/03.The-Sidebar.md
+++ b/docs/Boards/03.The-Sidebar.md
@@ -9,7 +9,7 @@ some_url: https://docs.composable.ai
 
 # The Sidebar
 
-A board's sidebar is broken into a series of menus, each which allows you to edit a different part of your board.
+A board's sidebar is broken into a series of menus, each of which allows you to edit a different part of your board.
 
 ## Details
 
@@ -94,10 +94,10 @@ The Selected Box menu opens when a box is selected.
 The Add Pin menu opens when a box is selected, and adds a pin to the selected box.
 
 - **Add Text**  
-    Adds a textbox directly.
+    Adds a textbox directly to the board.
 
 - **Shortcuts**     
-    A menu containing shortcuts for each type of resource on Composable. When a resource type is selected, a search box will popup.
+    A menu containing shortcuts for each type of resource on Composable. When a resource type is selected, a search box will pop up.
 
     Select your desired resource from the search menu and a shortcut pin will be added to the board.
 
