--- a/docs/WebApps/03.WebApp-Tutorial.md
+++ b/docs/WebApps/03.WebApp-Tutorial.md
@@ -1,10 +1,10 @@
 # Full Stack WebApp Tutorial: DataIntegrity Workbench
 Welcome! This tutorial will help you build a full-stack WebApp in Composable. The following <a href = "https://raw.githubusercontent.com/ComposableAnalytics/Docs/master/docs/WebApps/files/DataIntegrityWorkbenchFiles.zip" download>zip file</a> contains all the files you will need to build this example.
 ## Table of Contents
-* 1. [DataPortal](#DIPortal)
-* 2. [DataFlows](#DIFlow)
-* 3. [QueryViews](#DIQuery)
-* 4. [WebApp](#DIApp)
+1. [DataPortal](#DIPortal)
+2. [DataFlows](#DIFlow)
+3. [QueryViews](#DIQuery)
+4. [WebApp](#DIApp)
 ## <a name="DIPortal"></a>1. DataPortal
 ![DataPortal Rule](img/DIPortalRules.png)
 The next step to creating this application is to create your data source. The Excel sheet for creating the proper DataPortal is attached in the files. Simply create a new DataPortal with it and you may edit entries as you see fit. Start by creating a Group, then make a rule entry. Note that you will need to give it a DataFlow ID. This is the ID of the DataFlow for the rule you want run. More information can be found in the [DataFlow](#DIFlow) section. Rules can be set to run at different frequencies, and you can have one DataFlow registered multiple times if you want differing frequencies. The possible options are:
