Deployment option to sync tags

--- a/docs/Code-Promotion/03.Optional-Settings.md
+++ b/docs/Code-Promotion/03.Optional-Settings.md
@@ -145,3 +145,9 @@ With [`SyncSettings.SourceSearchParameters`](https://dev.composable.ai/api/CompA
 If the boolean option [`SyncSettings.SyncRetentionSettings`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SyncRetentionSettings) is `true`, then run retention settings for all DataFlows will be copied from the source to the target. These settings are visible on the runs page for a DataFlow and include things like "Days to Keep Runs".
 
 If this option is `false` or not set, DataFlows that already exist on the target will preserve their run retention settings while DataFlows that are created by the deployment will have default settings.
+
+### Sync Tags
+
+If the boolean option [`SyncSettings.SyncTags`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_SyncTags) is `true`, then tags for all DataFlows and QueryViews will be synced from the source to the target. Each target resource will have exactly the set of tags its corresponding source resource has.
+
+If this option is `false` or not set, DataFlows and QueryViews that already exist on the target will preserve their tags while DataFlows and QueryViews that are created by the deployment will have no tags.
